# cmake

./: .gitignore
101first_cmake/: 101first_cmake.cpp  CMakeLists.txt
102cmake_lib/: CMakeLists.txt
102cmake_lib/b1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test_xlog.vcxproj  test_xlog.vcxproj.filters  xlog.sln  xlog.vcxproj  xlog.vcxproj.filters
102cmake_lib/b1/Debug/: xlog.exp  xlog.lib
102cmake_lib/b1/test_xlog.dir/Debug/: test_xlog.exe.recipe  test_xlog.ilk
102cmake_lib/b1/test_xlog.dir/Debug/test_xlog.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
102cmake_lib/b1/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
102cmake_lib/b1/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
102cmake_lib/b1/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
102cmake_lib/b1/xlog.dir/Debug/: xlog.dll.recipe  xlog.ilk  xlog.lib.recipe
102cmake_lib/b1/xlog.dir/Debug/xlog.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
102cmake_lib/test_xlog/: test_xlog.cpp
102cmake_lib/xlog/: xlog.h
103message/: CMakeLists.txt  test_message.cpp
104test_ver/: CMakeLists.txt
105message_color/: CMakeLists.txt
(+77 files in other folders)
